# chair_style_checker

./: pyproject.toml
chair_style_checker/: common.py  predictor.py  test_dry_run.py
configs/: dong_shi_li_er.json  jifeng.json
